# flimcutter

./: .gitignore  README.md  findings.md  index.html  package-lock.json  package.json  progress.md  tailwind.config.ts  task_plan.md
.cargo/: config.toml
.claude/: settings.local.json
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: asr.rs  download.rs  ffmpeg.rs  file.rs  mod.rs
src-tauri/src/models/: mod.rs  task.rs  video.rs
src-tauri/src/services/: asr_service.rs  download_service.rs  ffmpeg_service.rs  mod.rs
src/components/Download/: DownloadPage.tsx
src/components/Editor/: AudioExtractPanel.tsx  BorderPanel.tsx  CompressPanel.tsx  ConvertPanel.tsx  CropPanel.tsx  EditorPage.tsx  EffectPreview.tsx  FloatingImagePanel.tsx  GifPanel.tsx  MergePanel.tsx  RotatePanel.tsx  SceneDetectPanel.tsx  ScreenshotPanel.tsx  SpeedPanel.tsx  SplitPanel.tsx  TrimPanel.tsx  VolumePanel.tsx  WatermarkPanel.tsx
src/components/Layout/: MainLayout.tsx
src/components/Settings/: AsrPanel.tsx  SettingsPage.tsx
src/components/Timeline/: Timeline.tsx
src/components/VideoPlayer/: VideoPlayer.tsx
src/i18n/: index.ts
src/i18n/locales/: zh-TW.json
src/services/: asr.ts  downloader.ts  ffmpeg.ts
src/stores/: downloadStore.ts  settingsStore.ts  videoStore.ts
src/types/: index.ts
