[package]
name = "flimcutter"
version = "0.1.0"
description = "FlimCutter - Desktop Video Editor"
authors = ["FlimCutter"]
edition = "2021"
rust-version = "1.80"

[lib]
name = "flimcutter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
uuid = { version = "1", features = ["v4"] }
regex = "1"
tempfile = "3"
log = "0.4"
env_logger = "0.11"
thiserror = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
